fix(base.css): a:before when wrapping img

--- a/site/src/.static/styles/base.css
+++ b/site/src/.static/styles/base.css
@@ -32,7 +32,8 @@ a.reference:before {
     display: inline-block;
 }
 a.footnote-ref:before,
-a.footnote-backref:before {
+a.footnote-backref:before,
+a:not(a img):before {
     content: unset;
     background: unset;
 }
